fix alignment

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -20,7 +20,7 @@ h1 {
 }
 
 p {
-    font-size: .8rem;
+    font-size: 1.5rem;
     line-height: 2rem;
     color: #fff;
     font-family: "Roboto", sans-serif;
